--- a/mole/views/login.ejs
+++ b/mole/views/login.ejs
@@ -24,7 +24,7 @@
 ██      ██  ██████  ███████ ███████  ███ ███  ██   ██ ██   ██ ██   ██ ██      ██  ██████  ███████ ███████
         </pre><!--END_CODE-->
     </div>
-    <div class="full-height center-container">
+    <div class="big center-container">
         <button id="btnLogin" class="login">Login</button>
     </div>
     <div class="center-container">
