--- a/mole/views/login.ejs
+++ b/mole/views/login.ejs
@@ -9,7 +9,7 @@
     <script>
         window.onload = () => {
             document.getElementById("btnLogin").addEventListener("click", () => {
-                window.location = "";
+                window.location = "<%-API_LOGIN_URL%>";
             });
         }
     </script>
