--- a/views/terminal.hbs
+++ b/views/terminal.hbs
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/term.css">
     <link rel="stylesheet" href="css/terminal/termUI.css">
     <script src="/js/term.js"></script>
+    <script src="/js/cmdController.js"></script>
 </head>
 <body>
     <terminal>
