Ready to work on API methods

--- a/views/terminal.hbs
+++ b/views/terminal.hbs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/terminal/termUI.css">
     <script src="/js/term.js"></script>
     <script src="/js/cmdController.js"></script>
+    <script src="/js/cmdApi.js"></script>
 </head>
 <body>
     <terminal>
