--- a/public/css/term.css
+++ b/public/css/term.css
@@ -70,7 +70,7 @@ string {
     color: var(--c-yellow);
 }
 
-return, define_tag {
+return, define_tag, boolean, obj {
     color: var(--c-fuschia);
 }
 
