campus name now on loc cmd

--- a/views/api/location.hbs
+++ b/views/api/location.hbs
@@ -1,4 +1,4 @@
-<ft>Location:</ft>
-  <ft_name>host</ft_name>: <string>{{ data.host }}</string>
-  <ft_name>begin_at</ft_name>: <string>{{ data.begin_at }}</string>
-  <ft_name>end_at</ft_name>: <string>{{ data.end_at }}</string>
+<ft>Latest Location</ft>:
+  <ft_name>host</ft_name>: {{ data.host }} <string>{{ data.campusName }}</string>
+  <ft_name>Began at</ft_name>: {{ data.begin_at }}
+  <ft_name>Ended at</ft_name>: {{ data.end_at }}<string>{{ data.not_ended }}</string>
