api42 now able to request any amount N

--- a/views/api/loginHistory.hbs
+++ b/views/api/loginHistory.hbs
@@ -4,3 +4,5 @@
   <ft_name>Began at</ft_name>: {{ l.begin_at }}
   <ft_name>Ended at</ft_name>: {{ l.end_at }}<string>{{ l.not_ended }}</string>
 {{/each}}
+
+Total: {{data.length}} locations
