run script ready

--- a/views/terminal.hbs
+++ b/views/terminal.hbs
@@ -6,6 +6,8 @@
     <script src="/js/term.js"></script>
     <script src="/js/cmdController.js"></script>
     <script src="/js/cmdApi.js"></script>
+
+    <title>molewakamole</title>
 </head>
 <body>
     <terminal>
