Front: working on tab completion and arrow keys controls

--- a/views/terminal.hbs
+++ b/views/terminal.hbs
@@ -24,6 +24,7 @@
         <term-control>
             <pre>
 <cmd>$></cmd> <input id="inputTerm" type="text" spellcheck="false">
+<comment><hints id="inputHints"></hints></comment>
             </pre>
         </term-control>
     </terminal>
