--- a/views/terminal.hbs
+++ b/views/terminal.hbs
@@ -23,7 +23,7 @@
         </term-result>
         <term-control>
             <pre>
-<cmd>$></cmd> <input id="inputTerm" type="text" spellcheck="false">
+<cmd>$></cmd> <textarea id="inputTerm" type="text" spellcheck="false"></textarea>
 <comment><hints id="inputHints"></hints></comment>
             </pre>
         </term-control>
