Bug with history and cursor should be fixed now.
Bugs with location and loginHistory fixed

--- a/views/api/location.hbs
+++ b/views/api/location.hbs
@@ -1,4 +1,4 @@
 <ft>Latest Location</ft>:
-  <ft_name>host</ft_name>: {{ data.host }} <string>{{ data.campusName }}</string>
+  <ft_name>Host</ft_name>: {{ data.host }} <string>{{ data.campusName }}</string>
   <ft_name>Began at</ft_name>: {{ data.begin_at }}
   <ft_name>Ended at</ft_name>: {{ data.end_at }}<string>{{ data.not_ended }}</string>
