--- a/views/api/loginHistory.hbs
+++ b/views/api/loginHistory.hbs
@@ -1,6 +1,6 @@
 {{#each data as |l|}}
 <ft>Location</ft>:
-  <ft_name>host</ft_name>: {{ l.host }} <string>{{ l.campusName }}</string>
+  <ft_name>Host</ft_name>: {{ l.host }} <string>{{ l.campusName }}</string>
   <ft_name>Began at</ft_name>: {{ l.begin_at }}
   <ft_name>Ended at</ft_name>: {{ l.end_at }}<string>{{ l.not_ended }}</string>
 {{/each}}
