--- a/views/api/search.hbs
+++ b/views/api/search.hbs
@@ -3,7 +3,7 @@
 <ft_name>Intra</ft_name>: https://profile.intra.42.fr/users/{{ u.login }}
 <ft_name>Correction points</ft_name>: {{ u.correction_point }} <ft_name>$$</ft_name>: {{ u.wallet }}
 <ft_name>Piscine</ft_name>: {{ u.pool_month }} {{ u.pool_year }}
-<img src="{{ u.image_url }}" alt="photo" height="200">
+<img src="{{ u.image.link }}" alt="photo" height="200">
 {{/each}}
 
 Total: {{ data.length }} users
