--- a/public/css/terminal/termUI.css
+++ b/public/css/terminal/termUI.css
@@ -44,3 +44,23 @@ term-control > pre {
 .collapsable {
     display: none;
 }
+
+save_btn {
+    --margin: 0.5rem;
+    margin: var(--margin);
+    padding: 0.5rem;
+    color: var(--font-color);
+    border-radius: 0.2rem;
+    border: 1px solid #00000000;
+
+    /* Center horizontally */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+save_btn:hover {
+    font-weight: bold;
+    border-color: var(--c-grey);
+}
