--- a/public/css/terminal/termUI.css
+++ b/public/css/terminal/termUI.css
@@ -45,7 +45,7 @@ term-control > pre {
     display: none;
 }
 
-save_btn {
+term_btn {
     --margin: 0.5rem;
     margin: var(--margin);
     padding: 0.5rem;
@@ -60,7 +60,7 @@ save_btn {
     text-align: center;
 }
 
-save_btn:hover {
+term_btn:hover {
     font-weight: bold;
     border-color: var(--c-grey);
 }
