formatMillis now obtaining the hours correctly

--- a/views/api/whitenovaLocation.hbs
+++ b/views/api/whitenovaLocation.hbs
@@ -3,5 +3,6 @@
   - End: {{ info.end_at }}
 
 {{#each data as |l|}}
-{{ l.begin_at }} -- {{ l.end_at }} -> {{ l.time }} {{ l.host }} {{ l.host_name }}
+{{ l.begin_at }} -- {{ l.end_at }} -> {{ l.duration }} {{ l.host }} {{ l.host_name }}
 {{/each}}
+{{!-- TODO add format --}}
