--- a/views/api/whitenovaLocation.hbs
+++ b/views/api/whitenovaLocation.hbs
@@ -3,7 +3,7 @@
   - End: <string>{{ info.end_at }}</string>
 
 {{#each locations as |l|}}
-<string>{{ l.begin_at }}</string> -- <string>{{ l.end_at }}</string> -> <number>{{ l.duration }}</number> {{ l.host_name }}
+{{ l.begin_at }} -- {{ l.end_at }} -> <number>{{ l.duration }}</number> <ft_name>{{ l.host_name }}</ft_name>
 {{/each}}
 
 Total: {{analysis.totalTime}} {{#if analysis.whitenovaTime}}(<obj>{{analysis.whitenovaTime}}</obj>){{/if}}
